--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -99,26 +99,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "blessed-leader",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_eb = expanded_ct.query(f\"Mode_confirm == '{mode_of_interest}'\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "seeing-court",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quality_text_mode = scaffolding.get_quality_text(expanded_ct, data_eb)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "distributed-peace",
    "metadata": {},
@@ -140,7 +120,7 @@
     "plot_title= \"Number of trips for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "print(expanded_ct['Mode_confirm'].value_counts(dropna=True))"
    ]
   },
@@ -158,7 +138,7 @@
     "plot_title= \"Number of commute trips for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_commute_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))"
    ]
   },
@@ -184,7 +164,7 @@
     "plot_title=\"Number of trips for each purposes (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_purpose%s' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "print(expanded_ct['Trip_purpose'].value_counts(dropna=True))"
    ]
   },
@@ -210,7 +190,7 @@
     "plot_title=\"Mode confirmations for trips under 10 Miles\\n%s\" % quality_text\n",
     "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))"
    ]
   },
@@ -249,7 +229,7 @@
     "plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
     "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(miles)"
    ]
   },
@@ -276,7 +256,7 @@
     "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
    ]
   },
   {
@@ -295,7 +275,7 @@
     "file_name ='average_miles_mode_confirm2%s' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['Mode_confirm']), file_name, plot_title)"
    ]
   },
   {
@@ -325,7 +305,7 @@
     "file_name ='ntrips_per_day%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month']), file_name, plot_title)"
    ]
   },
   {
@@ -357,7 +337,7 @@
     "file_name ='ntrips_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday']), file_name, plot_title)"
    ]
   }
  ],
