--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -182,7 +182,7 @@
     "ylab = 'Emissions (lb CO2/day/user)'\n",
     "file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "ylab = 'Energy (kWH/day/user)'\n",
     "file_name = \"ts_energy_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -233,7 +233,7 @@
     "ylab = 'Emissions (lb CO2/mile/day)'\n",
     "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -256,7 +256,7 @@
     "ylab = 'Unique IDs'\n",
     "file_name = \"ts_users%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['active_users'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "legend_title = 'Confirmed Mode'\n",
     "file_name = \"ts_all_modes%s\"%file_suffix\n",
     "timeseries_multi_plot(plot_data, 'date_time','trip_proportion','Mode_confirm', plot_title, ylab, legend_title, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_generic('multivariate timeseries', file_name, plot_title)"
+    "alt_text = store_alt_text_generic('multivariate timeseries', file_name, plot_title)"
    ]
   }
  ],
