--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -154,7 +154,7 @@
     "plot_title=\"Number of trips for each replaced mode (selected by users)\\n%s\" % quality_text\n",
     "file_name= 'ntrips_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_rm,values_rm,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title)"
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_rm, labels_rm), file_name, plot_title)"
    ]
   },
   {
@@ -179,7 +179,7 @@
     "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
     "file_name= 'ntrips_ebike_purpose%s' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
    ]
   },
   {
@@ -194,7 +194,7 @@
     "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
     "file_name ='ntrips_ebike_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
    ]
   },
   {
@@ -228,7 +228,7 @@
     "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
     "file_name ='miles_ebike_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(dg)"
    ]
   },
@@ -255,7 +255,7 @@
     "plot_title=\"Average Miles for each replaced mode with > 3 entries\\n'Other' represents trips with a non-standard or missing replacement\\n%s\" % quality_text\n",
     "file_name ='average_miles_replaced_mode%s' % file_suffix\n",
     "barplot_mode(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
    ]
   },
   {
@@ -274,7 +274,7 @@
     "file_name ='average_miles_replaced_mode2%s' % file_suffix\n",
     "\n",
     "barplot_mode2(data,x,y,y2,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data.Replaced_mode), file_name, plot_title)"
    ]
   },
   {
@@ -304,7 +304,7 @@
     "file_name ='ntrips_ebike_per_day%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
    ]
   },
   {
@@ -336,7 +336,7 @@
     "file_name ='ntrips_ebike_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
    ]
   }
  ],
