--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -185,7 +185,7 @@
     "ylab = 'Trip Count'\n",
     "file_name = \"ts_ebike_share%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "ylab = 'Miles'\n",
     "file_name = \"ts_ebike_miles%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -233,7 +233,7 @@
     "ylab = 'miles/user'\n",
     "file_name = \"ts_ebike_miles_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -259,7 +259,7 @@
     "ylab = 'Proportion of Daily Miles'\n",
     "file_name = \"ts_ebike_miles_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data, file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
   },
   {
@@ -286,7 +286,7 @@
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_ebike_trips_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
   },
   {
@@ -319,7 +319,7 @@
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_ebike_trip_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_trip_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
   },
   {
@@ -352,7 +352,7 @@
     "ylab = 'Proportion of Daily Miles'\n",
     "file_name = \"ts_ebike_mile_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_miles_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = scaffolding.store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
    ]
   }
  ],
