--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -184,7 +184,7 @@
     "plot_title=\"Sketch of Energy Impact (kWH) by Transport Mode\\n%s\" % quality_text\n",
     "file_name ='sketch_all_energy_impact%s' % file_suffix\n",
     "overeall_energy_impact(x,y,color,df,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(df['Energy Impact (kWH)'].values, df['selection'] + '; ' + df['Transport Mode']), file_name, plot_title)"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "plot_title=\"Sketch of Energy Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_energy_saved, quality_text)\n",
     "file_name ='sketch_all_mode_energy_impact%s' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(x,y), file_name, plot_title)"
    ]
   },
   {
@@ -246,7 +246,7 @@
     "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
     "file_name ='sketch_energy_impact_ebike%s' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
   },
   {
@@ -279,7 +279,7 @@
     "plot_title=\"Sketch of CO2 Emissions Impact for all confirmed trips \\n Contribution by mode towards a total of %s (kWH) \\n%s\" % (net_CO2_saved, quality_text)\n",
     "file_name ='sketch_all_mode_CO2impact%s' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
   },
   {
@@ -311,7 +311,7 @@
     "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
     "file_name ='sketch_CO2impact_ebike%s' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)\n",
-    "alt_text = scaffolding.store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
+    "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
   }
  ],
