Split load function

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -104,9 +104,8 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            dic_re,\n",
-    "                                                                            df_ei=df_ei,\n",
-    "                                                                            dic_pur=dic_pur,\n",
-    "                                                                            dic_fuel=dic_fuel)"
+    "                                                                            dic_pur=dic_pur)\n",
+    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel)"
    ]
   },
   {
