--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -83,9 +83,8 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
-    "                                                                            dic_re,\n",
-    "                                                                            dic_fuel=dic_fuel,\n",
-    "                                                                            df_ei=df_ei)"
+    "                                                                            dic_re)\n",
+    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel)"
    ]
   },
   {
