Remove hardcoded filenames

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -177,7 +177,7 @@
     "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
-    "file_name= 'ntrips_ebike_purpose%s' % file_suffix\n",
+    "file_name= 'ntrips_mode_purpose%s' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
     "alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
    ]
@@ -192,7 +192,7 @@
     "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
-    "file_name ='ntrips_ebike_replaced_mode%s' % file_suffix\n",
+    "file_name ='ntrips_mode_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
     "alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
    ]
@@ -226,7 +226,7 @@
     "    values_m.append(y)\n",
     "\n",
     "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
-    "file_name ='miles_ebike_replaced_mode%s' % file_suffix\n",
+    "file_name ='miles_mode_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(dg)"
@@ -301,7 +301,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_per_day%s' % file_suffix\n",
+    "file_name ='ntrips_mode_per_day%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
@@ -333,7 +333,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_ebike_per_weekday%s' % file_suffix\n",
+    "file_name ='ntrips_mode_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
