--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -242,8 +242,8 @@
     "y = ebei['Replaced_mode']\n",
     "color =ebei['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of Energy Impact of E-Bike trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
-    "file_name ='sketch_energy_impact_ebike%s' % file_suffix\n",
+    "plot_title=f\"Sketch of Energy Impact of {mode_of_interest} trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
+    "file_name ='sketch_energy_impact_mode%s' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
@@ -307,8 +307,8 @@
     "y = ebco2['Replaced_mode']\n",
     "color = ebco2['boolean']\n",
     "\n",
-    "plot_title=\"Sketch of Total Pounds of CO2 Emissions of E-Bike trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
-    "file_name ='sketch_CO2impact_ebike%s' % file_suffix\n",
+    "plot_title=f\"Sketch of Total Pounds of CO2 Emissions of {mode_of_interest} trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
+    "file_name ='sketch_CO2impact_mode%s' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
