--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -183,7 +183,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trips\\n%s'%quality_text\n",
     "ylab = 'Trip Count'\n",
-    "file_name = \"ts_ebike_share%s\"%file_suffix\n",
+    "file_name = \"ts_mode_share%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -206,7 +206,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage\\n%s'%quality_text\n",
     "ylab = 'Miles'\n",
-    "file_name = \"ts_ebike_miles%s\"%file_suffix\n",
+    "file_name = \"ts_mode_miles%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -231,7 +231,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage per Active User\\n%s'%quality_text\n",
     "ylab = 'miles/user'\n",
-    "file_name = \"ts_ebike_miles_user%s\"%file_suffix\n",
+    "file_name = \"ts_mode_miles_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -257,7 +257,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
-    "file_name = \"ts_ebike_miles_proportion%s\"%file_suffix\n",
+    "file_name = \"ts_mode_miles_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -284,7 +284,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
-    "file_name = \"ts_ebike_trips_proportion%s\"%file_suffix\n",
+    "file_name = \"ts_mode_trips_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
@@ -317,7 +317,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
-    "file_name = \"ts_ebike_trip_individual_variation%s\"%file_suffix\n",
+    "file_name = \"ts_mode_trip_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
@@ -350,7 +350,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
-    "file_name = \"ts_ebike_mile_individual_variation%s\"%file_suffix\n",
+    "file_name = \"ts_mode_mile_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
    ]
