Use database value for mode

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -29,7 +29,7 @@
     "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"E-bike\""
+    "mode_of_interest = \"pilot_ebike\""
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_eb = expanded_ct.query(f\"Mode_confirm == '{mode_of_interest}'\")"
+    "data_eb = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\")"
    ]
   },
   {
