--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -26,7 +26,7 @@
     "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"E-bike\""
+    "mode_of_interest = \"pilot_ebike\""
    ]
   },
   {
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
-    "data = expanded_ct[['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','Mode_confirm','distance_miles']].copy()\n",
+    "data = expanded_ct[['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','mode_confirm','distance_miles']].copy()\n",
     "data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
     "data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
     "data = data.drop(columns=['year','month','day'])\n",
@@ -117,7 +117,7 @@
     "# Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
     "data.user_id = pd.Categorical(data.user_id)\n",
     "data.date_time = pd.Categorical(data.date_time)\n",
-    "data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "data.mode_confirm = pd.Categorical(data.mode_confirm, ordered=True, categories=np.unique(list(dic_re.keys())))\n",
     "\n",
     "data.head()"
    ]
@@ -131,11 +131,11 @@
    "outputs": [],
    "source": [
     "# Count the number of trips for each confirmed mode\n",
-    "mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
+    "mode_counts = data.groupby(['user_id','date_time','mode_confirm'], as_index=False).size()\n",
     "mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
     "# Sum daily distance traveled for each mode\n",
-    "mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
+    "mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
     "mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
     "mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
     "\n",
@@ -144,8 +144,8 @@
     "active_users.rename(columns={'user_id':'active_users'}, inplace=True)\n",
     "\n",
     "# Add 7-day rolling avg smoothing to better see trends\n",
-    "mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
+    "mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
    ]
   },
   {
@@ -161,8 +161,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mode_counts_interest = mode_counts[mode_counts['Mode_confirm']==mode_of_interest]\n",
-    "mode_distance_interest = mode_distance[mode_distance['Mode_confirm']==mode_of_interest]"
+    "mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
+    "mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapping new mode labels with dictionaries\n",
+    "mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
+    "mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
+    "mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)"
    ]
   },
   {
@@ -276,17 +288,17 @@
    "outputs": [],
    "source": [
     "# Plot of ebike trip share proportion across all users\n",
-    "plot_data = mode_counts.groupby(['date_time','Mode_confirm'], as_index=False)['trip_count_smooth'].sum()\n",
+    "plot_data = mode_counts.groupby(['date_time','mode_confirm'], as_index=False)['trip_count_smooth'].sum()\n",
     "total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
     "plot_data = plot_data.merge(total_trips, on='date_time')\n",
     "plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
-    "plot_data = plot_data[plot_data['Mode_confirm']==mode_of_interest]\n",
+    "plot_data = plot_data[plot_data['mode_confirm']==mode_of_interest]\n",
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
     "file_name = \"ts_mode_trips_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
-    "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['Mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
+    "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
   },
   {
