{mode_of_interest}

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -29,7 +29,7 @@
     "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"pilot_ebike\""
+    "mode_of_interest = \"e-bike\""
    ]
   },
   {
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quality_text_mode = scaffolding.get_quality_text(expanded_ct, data_eb)"
+    "quality_text_mode = scaffolding.get_quality_text(expanded_ct, data_eb, mode_of_interest)"
    ]
   },
   {
@@ -243,7 +243,7 @@
     "color =ebei['boolean']\n",
     "\n",
     "plot_title=f\"Sketch of Energy Impact of {mode_of_interest} trips\\n Contribution by replaced mode towards a total of %s (kWH)\\n %s\" % (net_energy_saved, quality_text_mode)\n",
-    "file_name ='sketch_energy_impact_mode%s' % file_suffix\n",
+    "file_name =f'sketch_energy_impact_{mode_of_interest}%s' % file_suffix\n",
     "energy_impact(x,y,color,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
@@ -308,7 +308,7 @@
     "color = ebco2['boolean']\n",
     "\n",
     "plot_title=f\"Sketch of Total Pounds of CO2 Emissions of {mode_of_interest} trips\\n Contribution by replaced mode towards a total of %s (lb CO2 Emissions )\\n %s\" % (net_CO2_emissions, quality_text_mode)\n",
-    "file_name ='sketch_CO2impact_mode%s' % file_suffix\n",
+    "file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "CO2_impact(x,y,color,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)"
    ]
