--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -29,7 +29,7 @@
     "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"pilot_ebike\""
+    "mode_of_interest = \"e-bike\""
    ]
   },
   {
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quality_text = scaffolding.get_quality_text(expanded_ct, data_eb)"
+    "quality_text = scaffolding.get_quality_text(expanded_ct, data_eb, mode_of_interest)"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "plot_title=f\"Number of trips for each purpose for {mode_of_interest} only\\n{quality_text}\"\n",
-    "file_name= 'ntrips_mode_purpose%s' % file_suffix\n",
+    "file_name= f'ntrips_{mode_of_interest}_purpose%s' % file_suffix\n",
     "pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
     "alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)"
    ]
@@ -192,7 +192,7 @@
     "labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "plot_title=f\"Number of trips for each replaced transport mode for {mode_of_interest} only\\n{quality_text}\"\n",
-    "file_name ='ntrips_mode_replaced_mode%s' % file_suffix\n",
+    "file_name =f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_eb,values_eb,file_name)\n",
     "alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)"
    ]
@@ -226,7 +226,7 @@
     "    values_m.append(y)\n",
     "\n",
     "plot_title=f\"Distribution of Miles Replaced by {mode_of_interest} \\n{quality_text}\"\n",
-    "file_name ='miles_mode_replaced_mode%s' % file_suffix\n",
+    "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
     "alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "print(dg)"
@@ -282,7 +282,7 @@
     "y = 'Number of Trips'\n",
     "\n",
     "plot_title=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
-    "file_name ='ntrips_mode_per_day%s' % file_suffix\n",
+    "file_name =f'ntrips_{mode_of_interest}_per_day%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Day of the Month'].values), file_name, plot_title)"
@@ -300,7 +300,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "metropolitan-musical",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fq_weekdays = data_eb.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
@@ -313,8 +315,8 @@
     "x = 'Weekday'\n",
     "y = 'Number of Trips'\n",
     "\n",
-    "plot_title=\"Number of trips by weekday\\n%s\" % quality_text\n",
-    "file_name ='ntrips_mode_per_weekday%s' % file_suffix\n",
+    "plot_title=f\"Number of {mode_of_interest} trips by weekday\\n%s\" % quality_text\n",
+    "file_name =f'ntrips_{mode_of_interest}_per_weekday%s' % file_suffix\n",
     "\n",
     "barplot_day(data,x,y,plot_title,file_name)\n",
     "alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Weekday'].values), file_name, plot_title)"
