--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -26,7 +26,7 @@
     "month = 11\n",
     "program = \"prepilot\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"pilot_ebike\""
+    "mode_of_interest = \"e-bike\""
    ]
   },
   {
@@ -195,7 +195,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trips\\n%s'%quality_text\n",
     "ylab = 'Trip Count'\n",
-    "file_name = \"ts_mode_share%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_share%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -218,7 +218,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage\\n%s'%quality_text\n",
     "ylab = 'Miles'\n",
-    "file_name = \"ts_mode_miles%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_miles%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -243,7 +243,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage per Active User\\n%s'%quality_text\n",
     "ylab = 'miles/user'\n",
-    "file_name = \"ts_mode_miles_user%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_miles_user%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mileage_per_user'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -269,7 +269,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
-    "file_name = \"ts_mode_miles_proportion%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_miles_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)"
    ]
@@ -296,7 +296,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion (All Users, excluding air)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
-    "file_name = \"ts_mode_trips_proportion%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_trips_proportion%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['mode_confirm','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
@@ -329,7 +329,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Trip Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Trips'\n",
-    "file_name = \"ts_mode_trip_individual_variation%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_trip_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_trip_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','trip_count_smooth_x','trip_count_smooth_y']), file_name, plot_title)"
    ]
@@ -362,7 +362,7 @@
     "\n",
     "plot_title = f'Daily {mode_of_interest} Mileage Proportion for Individual users (Running average and variation)\\n%s'%quality_text\n",
     "ylab = 'Proportion of Daily Miles'\n",
-    "file_name = \"ts_mode_mile_individual_variation%s\"%file_suffix\n",
+    "file_name = f\"ts_{mode_of_interest}_mile_individual_variation%s\"%file_suffix\n",
     "timeseries_plot(plot_data['date_time'], plot_data['mode_miles_proportion'], plot_title, ylab, file_name)\n",
     "alt_text = store_alt_text_timeseries(plot_data.drop(columns=['user_id','distance_miles_smooth_x','distance_miles_smooth_y']), file_name, plot_title)"
    ]
