--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -83,6 +83,7 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
+    "                                                                            study_type,\n",
     "                                                                            dic_re)\n",
     "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel)"
    ]
