--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -103,6 +103,7 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
+    "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur)\n",
     "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel)"
