--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -91,6 +91,7 @@
     "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
+    "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur)"
    ]
