Hardcode program to default on both sides

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "year = 2020\n",
     "month = 11\n",
-    "program = \"prepilot\"\n",
+    "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None"
    ]
