Also display the distribution of phone versions
So that we can get a reasonable distribution of test phones

--- a/viz_scripts/Program_trip_characteristics.ipynb
+++ b/viz_scripts/Program_trip_characteristics.ipynb
@@ -587,12 +587,74 @@
    "id": "indoor-jumping",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Android versions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f72a49a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ".client_os_version.value_counts().plot(kind=\"pie\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14bbe6bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile_df = pd.json_normalize(edb.get_profile_db().find())\n",
+    "profile_df[\"user_id_str\"] = profile_df.user_id.apply(lambda u: str(u))\n",
+    "profile_program_df = profile_df.merge(uuid_program_df, on=\"user_id_str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8576056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile_program_df.query(\"curr_platform == 'android' & program != 'stage'\").client_os_version.value_counts().plot(kind='pie')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c52ba851",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile_program_df.query(\"curr_platform == 'ios'\").client_os_version.value_counts().plot(kind='pie')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d31a96c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile_program_df.query(\"curr_platform == 'ios' & program != 'stage'\").client_os_version.value_counts().plot(kind='pie')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ca652e1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -606,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
